# ads-copilot

./: .env.sample  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  azure.yaml  opencode.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: docker-compose.yml
app/backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
app/backend/models/: session_state.py  ws_messages.py
app/backend/routers/: email.py  health.py  ws.py
app/backend/services/: audio_utils.py  avatar_tts_service.py  copilot_agent.py  session_manager.py  speech_tts_service.py  voicelive_service.py
app/frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
app/frontend/public/: audio-playback-processor.js  audio-processor.js
architecture-diagramming/: SKILL.md  skill.json
databricks-ads-session/: SKILL.md  skill.json
databricks-ads-session/references/: conversation-framework.md  databricks-patterns.md  industry-templates.md  readiness-checklist.md
databricks-ads-session/scripts/: generate_architecture.py
infra/: main.bicep  main.json  main.parameters.json
infra/modules/: cognitive-services.bicep  container-app.bicep  container-apps-environment.bicep  container-registry.bicep  key-vault.bicep  log-analytics.bicep  logic-app.bicep  role-assignments.bicep
skills/databricks-ads-session/: skill.json
skills/databricks-ads-session/references/: conversation-framework.md  industry-templates.md  probing-questions.md  (+1 more)
(+48 files in other folders)
